<resources>
    <string name="app_name">NAM Mobile</string>

    <string name="openDrawer">Drawer dibuka</string>
    <string name="closeDrawer">Drawer ditutup</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="update_data">Update Data</string>
    <string name="inquiry_data">Inquiry Data</string>
    <string name="keluar">Keluar Aplikasi</string>
    <string name="navigasi_kategori_2">Sub Item Navigasi</string>
    <string name="navigation_view_item_4">Settings</string>
    <string name="navigation_view_item_5">About</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="list_dealer">
        <item>PIih Dealer</item>
        <item>BIT Pulogadung</item>
        <item>BIT Fatmawati</item>
        <item>Kuningan</item>
        <item>Blok M</item>
    </string-array>
</resources>
