<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="all">
        <item
            android:id="@+id/home"
            android:checked="false"
            android:icon="@drawable/ic_beranda"
            android:title="@string/home" />
        <item
            android:id="@+id/profile"
            android:checked="false"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/updateData"
            android:checked="false"
            android:icon="@drawable/ic_update"
            android:title="@string/update_data" />
        <item
            android:id="@+id/inquiryData"
            android:checked="false"
            android:icon="@drawable/ic_save"
            android:title="@string/inquiry_data" />
        <item
            android:id="@+id/keluar"
            android:checked="false"
            android:icon="@drawable/ic_exit"
            android:title="@string/keluar" />
    </group>

</menu>